--- a/FrontEnd/Styles/style.css
+++ b/FrontEnd/Styles/style.css
@@ -44,6 +44,7 @@ necessary design starts here
     --secondary-color: #787878 !important;
     --light-secondary-color: #D6D6D6 !important;
     --dark-secondary-color: #353636 !important;
+    --see-more-btn-color: #449586 !important;
 }
 
 
@@ -62,6 +63,12 @@ body{
 .cus_light {
     color: var(--light-color) !important;
 }
+.cus_secondary{
+    color: var(--secondary-color) !important;
+}
+.bg_cus_secondary{
+    background-color: var(--secondary-color) !important;
+}
 
 .bg_cus_light {
     background-color: var(--light-color) !important;
@@ -71,6 +78,33 @@ body{
 }
 .bg_cus_dark{
     background-color: var(--dark-color) !important;
+}
+
+.see_more_btn{
+    background-color: var(--see-more-btn-color) !important;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 1px solid var(--light-color) !important;
+    font-size: 20px;
+    color: var(--light-color) !important;
+    cursor: pointer;
+
+    margin-top: 25px;
+    border-radius: 5px;
+
+    transition: all 400ms linear;
+
+}
+
+.see_more_btn:hover{
+
+    background-color: var(--dark-color) !important;
+    color: var(--light-color) !important;
+    transition: all 400ms linear;
+
+
 }
 
 
@@ -194,6 +228,21 @@ navbar section starts here
     font-weight: bold !important;
 }
 
+/* .register_btn{
+    background-color: transparent !important;
+    padding: 15px;
+    outline: none !important;
+    border: 2px solid var(--light-color) !important;
+    color: var(--light-color) !important;
+    font-size: 20px;
+    margin-left: 145px !important;
+    font-weight: bold !important;
+    border-radius: 5px !important;
+    transition: all 600ms linear;
+    cursor: pointer;
+    margin-left: 25px !important;
+} */
+
 .register_btn{
     background-color: transparent !important;
     padding: 15px;
@@ -206,8 +255,15 @@ navbar section starts here
     border-radius: 5px !important;
     transition: all 600ms linear;
     cursor: pointer;
+    margin-bottom: 12px;
     /* margin-left: 25px !important; */
+    margin-top: -14px;
 }
+
+
+
+
+
 
 .register_btn:hover{
     background-color: var(--light-color) !important;
@@ -295,6 +351,92 @@ footer section ends here
 
 
 */
+
+
+/* 
+
+======================================================================
+
+secondary card navbar section starts here
+
+
+=====================================================================
+
+
+*/
+
+
+
+.cards_navbar ul li {
+    list-style: none !important;
+}
+
+.cards_navbar ul li a {
+    text-decoration: none !important;
+    /* color: black !important; */
+    /* color: var(--dark-color) !important; */
+    color: var(--dark-color);
+}
+.card_nav_ul_font_size{
+    font-size: 20px;
+}
+.card_nav_link_m {
+    margin-top: 5px;
+    /* font-weight: bold !important; */
+}
+.card_nav_link_active{
+    color: var(--see-more-btn-color) !important;
+    font-weight: bold;
+}
+
+/* 
+
+======================================================================
+
+secondary card navbar section ends here
+
+
+=====================================================================
+
+
+*/
+/* 
+
+======================================================================
+
+blog text section ends here
+
+
+=====================================================================
+
+
+*/
+
+
+.blogs_texts{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding: 25px;
+    font-size: 20px;
+}
+
+
+
+
+
+/* 
+
+======================================================================
+
+blogs text section ends here
+
+
+=====================================================================
+
+
+*/
+
+
 
 
 
