--- a/FrontEnd/Styles/style.css
+++ b/FrontEnd/Styles/style.css
@@ -214,7 +214,7 @@ navbar section starts here
 }
 .navbar_container{
     /* background-image: url(../img/our_tours_banner.png); */
-    background-image: url(../assets/img/our_tours_banner.png);
+    background-image: url(../assets/img/blogsBanner.jpg);
     height: 50vh;
     color: var(--light-color) !important;
     background-position: center !important;
